# trailblaze

./: Cargo.toml
.cargo/: config.toml
src/: building.rs  camera.rs  colonist.rs  debug_console.rs  farm.rs  main.rs  math.rs  navigation.rs  resources.rs  selection.rs  simulation.rs  terrain.rs  types.rs  ui.rs  world.rs
src/building/: components.rs  geometry.rs  input.rs  lifecycle.rs  mod.rs  placement.rs  polygon.rs  state.rs
