[package]
name = "trailblaze"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

[features]
dev_dynamic = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
